--- a/Nostalgia/Base.lproj/Main.storyboard
+++ b/Nostalgia/Base.lproj/Main.storyboard
@@ -124,6 +124,33 @@
             </objects>
             <point key="canvasLocation" x="1051" y="145"/>
         </scene>
+        <!--PickerVC-->
+        <scene sceneID="RUc-7A-XSr">
+            <objects>
+                <viewController storyboardIdentifier="PickerVC" id="Mx1-94-ict" customClass="PickerVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="HKg-JC-lSo"/>
+                        <viewControllerLayoutGuide type="bottom" id="z9j-fk-9KV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wEL-rn-IYx">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EGB-xH-rpB">
+                                <rect key="frame" x="0.0" y="203" width="320" height="162"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            </pickerView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <outlet property="picker" destination="EGB-xH-rpB" id="Krq-o0-b76"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sit-F8-Ah4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1051" y="846"/>
+        </scene>
         <!--Date PickerTVC-->
         <scene sceneID="aWZ-LT-ayr">
             <objects>
